[gd_scene load_steps=6 format=3 uid="uid://gxo3acon6q5t"]

[ext_resource type="Script" uid="uid://c06lrcrekqq58" path="res://bomb.gd" id="1_4fn8o"]
[ext_resource type="Texture2D" uid="uid://c137kcvc34wxb" path="res://bomb.png" id="1_573fp"]
[ext_resource type="Texture2D" uid="uid://p4xsmg6fse3a" path="res://explosion.png" id="3_nfxiy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6w74q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_573fp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nfxiy")
}],
"loop": true,
"name": &"explode",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4fn8o"]
radius = 55.0

[node name="Bomb" type="Node2D" groups=["CleanUp"]]
z_index = 2
script = ExtResource("1_4fn8o")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6w74q")
autoplay = "default"

[node name="ExplosionCountdown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["Bomb"]]

[node name="ExplosionHitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_4fn8o")
disabled = true

[node name="ExplosionTime" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="ExplosionCountdown" to="." method="_on_explosion_countdown_timeout"]
[connection signal="timeout" from="ExplosionTime" to="." method="_on_explosion_time_timeout"]
